--- a/src/App.css
+++ b/src/App.css
@@ -2369,8 +2369,6 @@ textarea,
   }
 }
 
-/*# sourceMappingURL=pico.classless.css.map */
-
 .App {
   text-align: center;
 }
@@ -2386,4 +2384,104 @@ textarea,
 
 .App-link {
   color: #61dafb;
+}
+/* main */
+main {
+  width: 80vw;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 992px) {
+  main {
+    width: 95vw;
+  }
+}
+.vergi {
+  background-color: #fb8b15;
+  color: #fff;
+  font-weight: 600;
+}
+.vergi-fiyat {
+  background-color: #ffb024;
+  color: #fff;
+  font-weight: 600;
+}
+.vergi-toplam {
+  background-color: #8f282b;
+  color: #fff;
+  font-weight: 600;
+}
+.vergi-toplam-fiyat {
+  background-color: #f75151;
+  color: #fff;
+  font-weight: 600;
+}
+.satis {
+  background-color: #159947;
+  color: #fff;
+  font-weight: 600;
+}
+.satisFiyat {
+  background-color: #49b265;
+  color: #fff;
+  font-weight: 600;
+}
+th,
+td {
+  font-weight: 600;
+}
+.result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  background-color: ;
+  padding-bottom: 10rem;
+}
+.result-item {
+  -ms-flex-preferred-size: 1;
+  flex-basis: 1;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.result-item2 {
+  -ms-flex-preferred-size: 1;
+  flex-basis: 1;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.image-grey {
+}
+/* 
+.image-container:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  background-image: url(http://placekitten.com/200/150);
+  background-position: top right;
+} */
+
+/* Form Items */
+.form-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: start;
+}
+.form-item label {
+  flex: 0 0 150px;
 }
